# MLOps

./: Jenkinsfile  README.md  data.dvc  dvc.yaml  main.py  pyproject.toml  requirements.txt
.dvc/: config
config/: credential.json
src/PLCConnect/: __init__.py
src/PLCConnect/communication/: __init__.py  serial_communication.py  tcp_communication.py
src/PLCConnect/config/: delta_dvp_14SS2.toml
src/PLCConnect/core/: edge_type.py  modbus_operation.py  plc_interface.py
src/PLCConnect/entity/: __init__.py
src/PLCConnect/utils/: common.py  enums.py
src/cnnClassifier/components/yolov5-trainer/yolov5/: train.py
tests/: run_tests.py  test_modbus_operations.py
